tests/snapshots/output_format__left_on_hunk_goes_to_file.snap
---
source: tests/output_format.rs
expression: "trace_navigation(&mut app, &[\"down\", \"left\"])"
---
start: app/core/engine/processor.rs
 down: [hunk app/core/engine/processor.rs.0]
 left: app/core/engine/processor.rs
