tests/snapshots/output_format__mixed_root_and_nested_files.snap
---
source: tests/output_format.rs
expression: folder_items(&app)
---
[
    (
        "src",
        0,
    ),
    (
        "tests",
        0,
    ),
]
