tests/snapshots/output_format__mode_change_confirmed_output.snap
---
source: tests/output_format.rs
expression: format_confirmed_diff(&files)
---
diff --git a/script.sh b/script.sh
old mode 100644
new mode 100755
