tests/snapshots/output_format__multiple_hunks_partial_selection.snap
---
source: tests/output_format.rs
expression: format_confirmed_diff(&files)
---
diff --git a/src/foo.rs b/src/foo.rs
--- a/src/foo.rs
+++ b/src/foo.rs
@@ -1,3 +1,4 @@
 line1
+added
 line2
 line3
@@ -20,2 +20,3 @@
 before
+inserted
 after
