tests/snapshots/output_format__renamed_file_with_hunks.snap
---
source: tests/output_format.rs
expression: format_confirmed_diff(&files)
---
diff --git a/old_name.rs b/new_name.rs
similarity index 90%
rename from old_name.rs
rename to new_name.rs
--- a/old_name.rs
+++ b/new_name.rs
@@ -1,3 +1,4 @@
 line1
+added
 line2
 line3
