tests/snapshots/output_format__render_left_on_file_keeps_content.snap
---
source: tests/output_format.rs
expression: "render_app(&mut app, 60, 20)"
---
"┌ [ ] ▼ app/core/engine/processor.rs  M  +1 -0 ────────────▲"
"│┌ [ ] +1 -0  @@ -1,5 +1,6 @@                              █"
"││    1   fn process() {                                   █"
"││    2 +     validate_input();                            █"
"││    2       let data = fetch();                          ║"
"││    3       transform(data);                             ║"
"││    4       store(data);                                 ║"
"│└    5   }                                                ║"
"└──────────────────────────────────────────────────────────║"
"┌ [ ] ▼ app/plugins/auth/login.rs  M  +1 -0 ───────────────║"
"│┌ [ ] +1 -0  @@ -10,5 +10,6 @@                            ║"
"││   10   fn authenticate() {                              ║"
"││   11 +     check_rate_limit();                          ║"
"││   11       let token = create_token();                  ║"
"││   12       verify(token);                               ║"
"││   13       set_session(token);                          ║"
"│└   14   }                                                ║"
"└──────────────────────────────────────────────────────────║"
"┌ [ ] ▼ app/plugins/storage/cache.rs  M  +1 -0 ────────────▼"
" 0/5 files confirmed                                        "
