tests/snapshots/output_format__render_left_on_folder_folds_children.snap
---
source: tests/output_format.rs
expression: "render_app(&mut app, 60, 20)"
---
"┌ [ ] ▶ app/ ──────────────────────────────────────────────┐"
"└──────────────────────────────────────────────────────────┘"
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
" 0/5 files confirmed                                        "
