tests/snapshots/output_format__render_mixed_types_at_deleted.snap
---
source: tests/output_format.rs
expression: "render_app(&mut app, 60, 25)"
---
"┌ [ ] ▼ src/main.rs  M  +2 -0 ─────────────────────────────▲"
"│┌ [ ] +1 -0  @@ -1,4 +1,5 @@                              ║"
"││    1   fn main() {                                      ║"
"││    2 +     init_logger();                               ║"
"││    2       let config = load();                         ║"
"││    3       run(config);                                 ║"
"│└    4   }                                                ║"
"│┌ [ ] +1 -0  @@ -20,3 +21,4 @@                            ║"
"││   20   fn shutdown() {                                  ║"
"││   22 +     flush_logs();                                ║"
"││   21       cleanup();                                   ║"
"│└   22   }                                                ║"
"└──────────────────────────────────────────────────────────║"
"┌ [ ] ▶ assets/logo.png  M BIN  2048 → 4096 bytes ─────────║"
"└──────────────────────────────────────────────────────────║"
"┌ [ ] ▶ Cargo.lock  M  +1 -1 ──────────────────────────────║"
"└──────────────────────────────────────────────────────────█"
"┌ [ ] ▶ src/old_util.rs  D  +0 -3 ─────────────────────────█"
"└──────────────────────────────────────────────────────────█"
"┌ [ ] ▼ src/utils.rs  R  +1 -0 ────────────────────────────█"
"│┌ [ ] +1 -0  @@ -5,3 +5,4 @@                              ║"
"││    5   fn assist() {                                    ║"
"││    6 +     log_call();                                  ║"
"││    6       do_work();                                   ▼"
" 0/5 files confirmed                                        "
